fixed alignment

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -37,6 +37,10 @@
   margin-left: 20px;
 }
 
+.comments-all {
+	margin-left: -18px;
+}
+
 .comments-pagination {
 	border-top: 1px solid #fff;
 	margin-left: -18px;
@@ -56,10 +60,6 @@
 
 .index-button {
 	margin-left: 19px;
-}
-
-.comments-all {
-	margin-left: -18px;
 }
 
 .index-row {
@@ -92,7 +92,5 @@
 	margin-left: 5px;
 }
 
-.rated .comm-destroy {
-	color: red;
-}
+
 
